Fix save button and increase z-index on variant b cookie banner
The save button the cookie banner did set analytics cookies, but it didn't set the cookie to tell it to stop showing the banner. This fixes this bug. There is also an issue with some items with a high z-index on the site appearing on top of the cookie banner, so this increases the z-index to prevent this.

--- a/src/scss/cookie-compliance-for-wordpress.scss
+++ b/src/scss/cookie-compliance-for-wordpress.scss
@@ -83,14 +83,14 @@ $breakpoints: ('small': (min-width: 767px),
     padding: 30px 10px 10px 10px;
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     overflow-y: scroll;
 
      &.cookie-banner-open {
-        top: 0px;
-        left: 0px;
-        right: 0px;
-        bottom: 0px;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
     }
 }
 
